# ScreenRecord

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
qml/: EditorTopBarButton.qml  EditorWindow.qml  HudWindow.qml  Main.qml  Theme.qml
qml/components/: AudioLevelMeter.qml  SettingsSection.qml  SettingsSlider.qml
qml/editor/: PlaybackControls.qml  SettingsPanel.qml  VideoPlayback.qml
qml/editor/timeline/: TimelineEditor.qml  TimelineToolButton.qml
qml/hud/: AreaSelectionOverlay.qml  DeviceSelector.qml  HudGroupButton.qml  HudIconButton.qml  HudOverlay.qml
resources/: Info.plist.in
src/: main.cpp
src/app/: Application.cpp  Application.h  CMakeLists.txt  Settings.cpp  Settings.h  WindowManager.cpp  WindowManager.h
src/capture/: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  CaptureBackend.cpp  CaptureBackend.h  CursorTelemetry.cpp  CursorTelemetry.h  GpuScreenRecorder.cpp  GpuScreenRecorder.h  LinuxCaptureBackend.cpp  LinuxCaptureBackend.h  MacCaptureBackend.cpp  MacCaptureBackend.h  MacCaptureBackend.mm  MacCaptureBridge.h  PipeWireCapture.cpp  PipeWireCapture.h  RecordingController.cpp  RecordingController.h
src/capture/mac/: CaptureBridging-Header.h  RecordingBridge.swift  ScreenRecorder.swift
src/editor/: CMakeLists.txt  EffectRegionModel.cpp  EffectRegionModel.h  GlobalSettings.cpp  GlobalSettings.h  PlaybackController.cpp  PlaybackController.h  ShortcutsManager.cpp  ShortcutsManager.h  TrimModel.cpp  TrimModel.h
src/exporter/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  ExportTypes.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  FFmpegMuxer.cpp  FFmpegMuxer.h  FilterPipeline.cpp  FilterPipeline.h  FrameFilter.h  GifExporter.cpp  GifExporter.h  VideoExporter.cpp  VideoExporter.h
src/exporter/filters/: CompositeFilter.cpp  CompositeFilter.h
src/i18n/: CMakeLists.txt  I18nManager.cpp  I18nManager.h
src/platform/: CMakeLists.txt  LinuxPlatform.cpp  LinuxPlatform.h  MacPlatform.cpp  MacPlatform.h  MacScreenCapture.cpp  MacScreenCapture.h  MacScreenCapture.mm  MacScreenCaptureBridge.h  PlatformIntegration.cpp  PlatformIntegration.h  ScreenCastPortal.cpp  ScreenCastPortal.h
src/platform/mac/: Bridge.swift  HudWindowRules.swift  PlatformBridging-Header.h  ScreenCapturePicker.swift
src/project/: CMakeLists.txt  ProjectData.cpp  ProjectData.h  ProjectManager.cpp  ProjectManager.h  ProjectTypes.h
src/renderer/: CMakeLists.txt  ShadowRenderer.cpp  ShadowRenderer.h  VideoPlayer.cpp  VideoPlayer.h
tests/: CMakeLists.txt  tst_compositefilter.cpp  tst_maccapture.cpp
